--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
+    "uuid": "^9.0.1",
     "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/uuid": "^9.0.6"
   }
 }
